fix layout; remove margin from body for improved alignment

--- a/style.css
+++ b/style.css
@@ -153,7 +153,6 @@ body
     border-radius:50%;
     overflow:hidden;
     background:#111827;
-    margin: 100px;
 }
 .pfp
 {
